--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
     <div class="container text-center my-5">
       <div class="row">
         <div class="col-lg-6 col-md-8 mx-auto">
-          <img class="rounded-img" src="img.jpg" alt="Color" />
+          <img class="rounded-img" src="./img.jpg" alt="Color" />
           <h1 class="fw-light">Alexey Tkachenko</h1>
           <p class="lead text-muted">
             I am excited to teach you software development. In this HTML course
-            you will build your personal website
+            you will build your personal website.
           </p>
           <a
             href="https://www.linkedin.com/in/alexeytkachenko1/"
